--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js"></script>
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bytesized&display=swap" rel="stylesheet">
+    <script src="../static/js/script.js"></script>
     <title>A cobra</title>
 </head>
 <body>
-    <div class="jogo">
+    <div class="container">
+        <div class="texto">
+            <h1>TEM QUE APERTAR ESPAÇO :) </h1>
+        </div>
+        <div class="borda">
+            <div id="jogo">
         
+            </div>
+            
+        </div>
     </div>
-    <div class="texto">
-        <h1>Tem que apertar espaço :)</h1>
-    </div>
-</body>
+</body> 
 </html>
