meu deus movimento finalmente

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bytesized&display=swap" rel="stylesheet">
-    <script src="../static/js/script.js"></script>
     <title>A cobra</title>
 </head>
 <body>
@@ -16,11 +15,11 @@
             <h1>TEM QUE APERTAR ESPAÇO :) </h1>
         </div>
         <div class="borda">
-            <div id="jogo">
-        
-            </div>
-            
+            <div id="jogo"></div>
         </div>
     </div>
+
+    <script src="../static/js/script.js"></script>
+
 </body> 
 </html>
